new files added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <p>
-            This is a HTML file.
+            This is a HTML file and it is a index page.
         </p>
     </body>
 </html>
